--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,18 @@ configure-stamp
 debian/files
 debian/pppoe
 debian/pppoe.debhelper.log
+debian/pppoe.substvars
+gui/Makefile
+gui/tkpppoe
+scripts/*
+!scripts/*.in
+src/Makefile
+src/config.h
+src/config.log
+src/config.status
+src/configure
+src/libevent/Makefile
+src/pppoe
+src/pppoe-relay
+src/pppoe-server
+src/pppoe-sniff
